--- a/SecureWalk/src/app/components/comentario/insertareditarcomentario/insertareditarcomentario.component.html
+++ b/SecureWalk/src/app/components/comentario/insertareditarcomentario/insertareditarcomentario.component.html
@@ -1,53 +1,51 @@
-<div class="container">
-  <div style="text-align: center; margin: 5%">
-    <h1>Registro de comentarios</h1>
-  </div>
-  <div style="text-align: center">
-    <form [formGroup]="form" (submit)="aceptar()">
-      <mat-form-field>
+<div class="main-container">
+  <div class="form-card-container">
+    <h1 class="form-title">{{ edicion ? 'Editar Comentario' : 'Registrar Nuevo Comentario' }}</h1>
+
+    <form [formGroup]="form" (submit)="aceptar()" class="comentario-form">
+      <mat-form-field appearance="outline" class="full-width-field">
         <mat-label>Descripción Comentario</mat-label>
         <input matInput formControlName="descripcionComentario" />
-
+        <mat-icon matSuffix>comment</mat-icon>
         <mat-error *ngIf="form.get('descripcionComentario')?.hasError('required')">
-          La descripcion del comentario es obligatorio!!
+          La descripción del comentario es obligatoria.
         </mat-error>
       </mat-form-field>
-      <br />
 
-      <mat-form-field>
+      <mat-form-field appearance="outline" class="full-width-field">
         <mat-label>Post</mat-label>
-        <!-- Changed formControlName to idPost -->
         <mat-select formControlName="idPost">
-          @for (post of listaPost; track post) {
+          @for (post of listaPost; track post.idPost) {
           <mat-option [value]="post.idPost">{{ post.descripcionPost }}</mat-option>
           }
         </mat-select>
+        <mat-icon matSuffix>article</mat-icon>
         <mat-error *ngIf="form.get('idPost')?.hasError('required')">
-          El post es obligatorio!!
+          El post es obligatorio.
         </mat-error>
       </mat-form-field>
-      <br />
 
-      <mat-form-field>
+      <mat-form-field appearance="outline" class="full-width-field">
         <mat-label>Usuario</mat-label>
-        <!-- Changed formControlName to idUsuario -->
         <mat-select formControlName="idUsuario">
-          @for (usuario of listaUsuarios; track usuario) {
-          <mat-option [value]="usuario.idUsuario">{{
-            usuario.nombreUsuario
-          }}</mat-option>
+          @for (usuario of listaUsuarios; track usuario.idUsuario) {
+          <mat-option [value]="usuario.idUsuario">{{ usuario.nombreUsuario }}</mat-option>
           }
         </mat-select>
+        <mat-icon matSuffix>person</mat-icon>
         <mat-error *ngIf="form.get('idUsuario')?.hasError('required')">
-          El usuario es obligatorio!
+          El usuario es obligatorio.
         </mat-error>
       </mat-form-field>
-      <br />
 
-      <button mat-raised-button color="primary" [style.background-color]="'#3f51b5'">Aceptar</button>
-      <button mat-raised-button color="warn" [style.background-color]="'#FFC107'" (click)="cancelar()">
-        Cancelar
-      </button>
+      <div class="form-actions">
+        <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">
+          Aceptar
+        </button>
+        <button mat-raised-button color="warn" (click)="cancelar()" type="button">
+          Cancelar
+        </button>
+      </div>
     </form>
   </div>
 </div>
