--- a/SecureWalk/src/app/components/usuario/listarusuario/listarusuario.component.html
+++ b/SecureWalk/src/app/components/usuario/listarusuario/listarusuario.component.html
@@ -1,4 +1,5 @@
-<div class="page-main-content"> <div class="top-header-section">
+<div class="page-main-content">
+  <div class="top-header-section">
     <div class="title-search-block">
       <h1 class="titulo">Lista de Usuarios</h1>
 
@@ -61,14 +62,14 @@
             color="primary"
             [routerLink]="['ediciones', usuario.idUsuario]"
           >
-            <mat-icon>edit</mat-icon>
+            <mat-icon>edit</mat-icon> Editar
           </button>
           <button
             mat-button
             color="warn"
             (click)="eliminar(usuario.idUsuario)"
           >
-            <mat-icon>delete_forever</mat-icon>
+            <mat-icon>delete_forever</mat-icon> Eliminar
           </button>
         </mat-card-actions>
       </mat-card>
@@ -83,4 +84,5 @@
     >
     </mat-paginator>
   </div>
-</div> <footer class="app-footer"></footer>
+</div>
+<footer class="app-footer"></footer>
